--- a/src/ontapltcb2.cbp
+++ b/src/ontapltcb2.cbp
@@ -43,6 +43,9 @@
 		<Unit filename="p7.h" />
 		<Unit filename="p8_b1.h" />
 		<Unit filename="p8_b2.h" />
+		<Unit filename="p9.h">
+			<Option target="&lt;{~None~}&gt;" />
+		</Unit>
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
